--- a/index.html
+++ b/index.html
@@ -346,48 +346,48 @@
                 $('#top').css({
                     "background-color": "white",
                     "border-bottom": "1px solid #eee",
-                    "color": "grey",
+                    "color": "black",
                     "visibility": "visible"
                 });
             }
             if ($(this).scrollTop() < t) {
                 $('#top a').css({
-                    "color": "grey"
+                    "color": "black"
                 });
             } else {
                 $('#top a').css({
-                    "color": "grey"
+                    "color": "black"
                 });
             }
             if ($(this).scrollTop() > t && $(this).scrollTop() < t1) {
                 $('#nav-p').css({
                     "color": "rgb(223,64,76)",
-                    "font-weight": "400"
+                    "font-weight": "350"
                 });
             } else if ($(this).scrollTop() < t) {
               $('#nav-p').css({
-                  "color": "grey",
-                  "font-weight": "300"
+                  "color": "black",
+                  "font-weight": "350"
               });
             } else {
                 $('#nav-p').css({
-                    "color": "grey",
-                    "font-weight": "300"
+                    "color": "black",
+                    "font-weight": "350"
                 });
             }
             if ($(this).scrollTop() > t1) {
                 $('#nav-a').css({
                     "color": "rgb(52,183,143)",
-                    "font-weight": "400"
+                    "font-weight": "350"
                 });
             } else if ($(this).scrollTop() < t) {
               $('#nav-a').css({
-                  "color": "grey","font-weight": "300"
+                  "color": "black","font-weight": "350"
               });
             } else {
                 $('#nav-a').css({
-                    "color": "grey",
-                    "font-weight": "300"
+                    "color": "black",
+                    "font-weight": "350"
                 });
             }
         });
