--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -38,21 +38,21 @@
         <a href="#"><img class="bread_img" onclick="show_nav()" src="../p_image/bread.png" alt="nav bread icon" /></a>
     </nav>
     <nav class="nav">
-      <ul>
-        <li><a href="../index.html#portfolio" id="nav-p">Projects</a></li>
-        <li><a href="" id="nav-p">Gallery</a></li>
-        <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
-    </ul>
+        <ul>
+            <li><a href="index.html#portfolio" id="nav-p">Portfolio</a></li>
+            <!--<li><a href="" id="nav-p">Blog</a></li>-->
+            <li><a href="" id="nav-p">Playground</a></li>
+            <!--<li><a href="index.html#about" id="nav-a">About</a></li>-->
+            <li><a href="WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+        </ul>
     </nav>
 </header>
 <div class="full" id='full' onclick='show_page()'>
-  <ul>
-    <li><a href="../index.html#portfolio" id="nav-p">Projects</a></li>
-    <li><a href="" id="nav-p">Blog</a></li>
-    <li><a href="" id="nav-p">Gallery</a></li>
-    <li><a href="../about.html" id="nav-a">About</a></li>
-    <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
-</ul>
+    <ul>
+        <li><a href="index.html#portfolio">Portfolio</a></li>
+        <li><a href="index.html#about">Playground</a></li>
+        <li><a href="WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+    </ul>
 </div>
 
 
