IV+index update

--- a/pages/VR.html
+++ b/pages/VR.html
@@ -166,34 +166,44 @@
       </ul>
   </div>
 
-
-  <section class="title clearfix" style="background-image: url('p_image/architecture.png'); color:white;">
-      <h1>TexAR</h1>
-      <p>Enhance architecture learning with AR</p>
-      <img src="../p_image/architecture.png" alt="lighting design title"/>
-  </section>
+  <div style="height:100vh;">
+        <section class="title clearfix" style="height:80vh;color:rgba(0,0,0,0.8);">
+                <h1>TexAR</h1>
+                <p>Enhance architecture learning with AR</p>
+            <img src="../p_image/architecture.png" alt="lighting design title"/>
+            
+        </section>
+        <section class="page clearfix" style="height:20vh;">
+            <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
+                <div class="col-lg-4">
+                  <div class="box">
+                    <h4>Timeframe</h4>
+                    <h5>3 months</h5>
+                    <h5>Sep.2018 - Dec.2018</h5>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="box">
+                      <h4>team</h4>
+                      <h5>Wendi Ding</h5>
+                      <h5>Chaitrali Gandhi</h5>
+                      </div>
+                  </div>
                 
-  <section class="page clearfix">
-      <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
-          <div class="col-md-6 col-sm-6" >
-              <p>
-                <b class="black ">Project Type:&nbsp;&nbsp;</b><b class="light">UX research & Design</b>
-              </p>
-              <p>
-                <b class="black ">Roles:&nbsp;&nbsp;</b><b class="light">UX researcher & developer</b>
-              </p>
-          </div>
-          <div class="col-md-6 col-sm-6">
-              <p>
-                <b class="black ">Team:&nbsp;&nbsp;</b><b class="light">Wendi Ding, Chaitrali Gandhi</b>
-              </p>
-                <b class="black ">Timeline:&nbsp;&nbsp;</b><b class="light">Fall 2018</b>
-              </p>
-          </div>
-      </div>
-    </section>
+                  <div class="col-lg-4">
+                      <div class="box">
+                        <h4>my contribution</h4>
+                        <h5>Adobe Illustrator</h5>
+                        </div>
+                    </div>
+            </div>
+        </section>
+        </div>
 
-    <section class="page clearfix" style="margin-top:-40px;">
+
+
+
+    <section class="page clearfix" style="padding-top:1vh;">
         <h1 class="center">Exploration - <br>Disconnection in Real - Digital Architecture Texturing </h1>
         <p class="text">
           </p>
@@ -216,7 +226,7 @@
       </section>
 
 
-<section class="page clearfix grey"  style="margin-top:-20px;">
+<section class="page clearfix grey"  style="padding-top:1vh;">
     <h1 class='center'>Solution Overview</h1>
     <p class="text">
         <i>TexAR</i> is a dynamic texturing method which would use AR to enable instant dynamic texturing on the physical model by recognizing the structure and let architect choose different materials from a material library. The physical model would be an anchor that connects textures and physical model. Architects can hold the physical model in their hands, see effects applying materials they choose in real time with our system and have a good spatial understanding at the same time.
