--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -55,41 +55,42 @@
     </ul>
 </div>
 
-
-<section class="title clearfix" style="background-image: url('p_image/wburc.png'); color:rgba(0,0,0,0.8);">
+<div style="height:100vh;">
+<section class="title clearfix" style="height:80vh;color:rgba(0,0,0,0.8);">
     <h1>WBUR Persona Experiment</h1>
     <p>Exploration of new audience experience</p>
     <img src="../p_image/wburc.png" alt="lighting design title"/>
+    
 </section>
-<section class="page clearfix">
+<section class="page clearfix" style="height:20vh;">
     <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
         <div class="col-lg-4">
           <div class="box">
-            <h4>Tools</h4>
-            <p>Adobe Illustrator</p>
+            <h4>Timeframe</h4>
+            <h5>3 months</h5>
+            <h5>Jun.2018 - Aug.2018</h5>
             </div>
         </div>
         <div class="col-lg-4">
-            <p>
-              <b>Project Type:&nbsp;&nbsp;</b>Internship
-            </p>
-            <p>
-              <b>Roles:&nbsp;&nbsp;</b>UX Researcher
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <p>
-              <b>Team:&nbsp;&nbsp;</b>Individual work
-            </p>
-            <p>
-              <b>Timeline:&nbsp;&nbsp;</b>Summer 2018
-            </p>
-        </div>
+            <div class="box">
+              <h4>team</h4>
+              <h5>Research Manager</h5>
+              <h5>Research Intern (me)</h5>
+              </div>
+          </div>
+        
+          <div class="col-lg-4">
+              <div class="box">
+                <h4>my contribution</h4>
+                <h5>Adobe Illustrator</h5>
+                </div>
+            </div>
     </div>
 </section>
+</div>
 
 
-<section class="page clearfix" style="margin-top:-40px;">
+<section class="page clearfix grey" style="margin-top:-40px;">
   <h1 class="center">Research Scope - <br>It is no logner just a radio experience</h1>
   <p class="text">
       Whether it’s an interview on-air, a news story that caught someone’s eye on our website, an episode of a podcast with critical thinking, or a post on social media, public radio is no longer just a voice people listen to during drive time on the car radio. Every touch WBUR has with our audience contributes to our audience’s experience, and impacts how they relate to our station.
