--- a/pages/Maestro.html
+++ b/pages/Maestro.html
@@ -39,19 +39,19 @@
     </nav>
     <nav class="nav">
         <ul>
-            <li><a href="index.html#portfolio" id="nav-p">Portfolio</a></li>
+            <li><a href="../index.html#portfolio" id="nav-p">Work</a></li>
             <!--<li><a href="" id="nav-p">Blog</a></li>-->
-            <li><a href="" id="nav-p">Playground</a></li>
+            <li><a href="" id="nav-p">About</a></li>
             <!--<li><a href="index.html#about" id="nav-a">About</a></li>-->
-            <li><a href="WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </nav>
 </header>
 <div class="full" id='full' onclick='show_page()'>
     <ul>
-        <li><a href="index.html#portfolio">Portfolio</a></li>
-        <li><a href="index.html#about">Playground</a></li>
-        <li><a href="WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="../index.html#portfolio">Work</a></li>
+        <li><a href="../index.html#about">About</a></li>
+        <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
     </ul>
 </div>
 
