--- a/pages/vote.html
+++ b/pages/vote.html
@@ -145,28 +145,30 @@
 </head>
 
 <body>
-  <header class='non-fixed' id='top'>
-      <a href="../index.html">
-          <img class='logo_img' id="logo_img" src="../p_image/logo.png" alt="logo of Wendi Ding" style=""/>
-      </a>
-      <nav class="nav nav_bread">
-          <a href="#"><img class="bread_img" onclick="show_nav()" src="../p_image/bread.png" alt="nav bread icon" /></a>
-      </nav>
-      <nav class="nav">
-          <ul>
-              <li><a href="../index.html#portfolio" id="nav-p">Projects</a></li>
-              <li><a href="../index.html#about" id="nav-a">About</a></li>
-              <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
-          </ul>
-      </nav>
-  </header>
-  <div class="full" id='full' onclick='show_page()'>
-      <ul>
-          <li><a href="../index.html#portfolio">Projects</a></li>
-          <li><a href="../index.html#about">About</a></li>
-          <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
-      </ul>
-  </div>
+        <header class='non-fixed' id='top'>
+                <a href="../index.html">
+                    <img class='logo_img' src="../p_image/logo.png" alt="logo of Chong Li" />
+                </a>
+                <nav class="nav nav_bread">
+                    <a href="#"><img class="bread_img" onclick="show_nav()" src="../p_image/bread.png" alt="nav bread icon" /></a>
+                </nav>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="../index.html#portfolio" id="nav-p">Work</a></li>
+                        <!--<li><a href="" id="nav-p">Blog</a></li>-->
+                        <li><a href="" id="nav-p">About</a></li>
+                        <!--<li><a href="index.html#about" id="nav-a">About</a></li>-->
+                        <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="full" id='full' onclick='show_page()'>
+                <ul>
+                    <li><a href="../index.html#portfolio">Work</a></li>
+                    <li><a href="../index.html#about">About</a></li>
+                    <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+                </ul>
+            </div>
 
 
   <section class="title clearfix" style="background-image: url('p_image/votec.png'); color:rgba(0,0,0,0.8);">
