--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                 <div class="col-lg-4 col-md-6 cover research">
                         <a href="pages/wbur.html">
-                            <img src="p_image/wbur.png" class="img-responsive" alt="" />
+                            <img src="p_image/wbury.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
                                 <b>WBUR Persona Experiment</b><br><br>Exploration of new audience experience
                             </p>
@@ -139,7 +139,7 @@
 
                 <div class="col-lg-4 col-md-6 cover research">
                         <a href="pages/MSRA.pdf">
-                            <img src="p_image/MSRA.png" class="img-responsive" alt="" />
+                            <img src="p_image/MSRAw.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
                                 <b>MSRA Springfield</b><br><br>Intern Recruiting System
                             </p>
@@ -148,7 +148,7 @@
 
                 <div class="col-lg-4 col-md-6 cover research">
                         <a href="pages/AACTMAD.pdf">
-                            <img src="p_image/AACTMAD.png" class="img-responsive" alt="" />
+                            <img src="p_image/aactmadg.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
                                 <b>AACTMAD</b><br><br>Retaining Community Volunteers
                             </p>
