--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -59,7 +59,7 @@
 <section class="title clearfix" style="height:80vh;color:rgba(0,0,0,0.8);">
     <h1>WBUR Persona Experiment</h1>
     <p>Exploration of new audience experience</p>
-    <img src="../p_image/wburc.png" alt="lighting design title"/>
+    <img src="../p_image/wburb.svg" alt="lighting design title"/>
     
 </section>
 <section class="page clearfix" style="height:20vh;">
@@ -90,7 +90,7 @@
 </div>
 
 
-<section class="page clearfix grey" style="margin-top:-40px;">
+<section class="page clearfix grey" >
   <h1 class="center">Research Scope - <br>It is no logner just a radio experience</h1>
   <p class="text">
       Whether it’s an interview on-air, a news story that caught someone’s eye on our website, an episode of a podcast with critical thinking, or a post on social media, public radio is no longer just a voice people listen to during drive time on the car radio. Every touch WBUR has with our audience contributes to our audience’s experience, and impacts how they relate to our station.
@@ -112,7 +112,7 @@
   </div>-->
 </section>
 
-<section class="page clearfix grey"  style="margin-top:-20px;">
+<section class="page clearfix"  >
   <h1 class='center'>Define the Audience</h1></h1>
   <p class="text">
       There are 500,000 unique individuals listening to WBUR each week. How do we communicate effectively with each of them about why they listen to WBUR, what makes them loyal to the program, and what drives them to donate? Our answer is to use personas. A user persona is a fictional, yet realistic, description of a person who uses your product. In this case, someone who consumes WBUR’s content. By creating a set of representative personas, we are able to reduce our audience down to a <a href="https://uxplanet.org/ux-personas-vs-marketing-personas-whats-the-difference-adc77f630332">“manageable and memorable set of characters,”</a> and then design unique messages for each character in order to explore how to reach all our audience members.
