--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -57,8 +57,8 @@
 
 <div style="height:100vh;">
 <section class="title clearfix" style="height:80vh;color:rgba(0,0,0,0.8);">
-    <h1>WBUR Persona Experiment</h1>
-    <p>Exploration of new audience experience</p>
+    <h1>internship @ wbur</h1>
+    <p>Exploration of innovative fund-raising experience</p>
     <img src="../p_image/wburb.svg" alt="lighting design title"/>
     
 </section>
