--- a/pages/VR.html
+++ b/pages/VR.html
@@ -27,6 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400i" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src='../p_js/js.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
