--- a/pages/Maestro.html
+++ b/pages/Maestro.html
@@ -6,7 +6,8 @@
     <link rel="shortcut icon" href="../p_image/logo.png">
     <script src="https://use.fontawesome.com/f3a7dfaa36.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">   
     <script src='../p_js/jquery-3.1.1.min.js'></script>
     <script src='../p_js/js.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
