--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -87,7 +87,7 @@
                 <h5>- Created the WBUR user profile containing 3 personas</h5>
                 <h5>- Performed a pilot test of the experiment</h5>
                 <h5>- Designed and launched an online experiment</h5>
-                <h5>- Gave a 45-minute speech to WBUR on the topic of <i><b>What do we know from the persona experiment?</b></i></h5>
+                <h5>- Gave a 45-minute speech to WBUR on the topic of <a href="https://prezi.com/view/Rp0j6K9oBHqyuSEkFA90/"><i><b>What do we know from the persona experiment?</b></i></a></h5>
                 <h5>- Publishe 4 blogs on <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> </h5>
                 </div>
             </div>
