--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                         <a href="pages/wbur.html">
                             <img src="p_image/wbury.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
-                                <b>WBUR Persona Experiment</b><br><br>Exploration of new audience experience
+                                <b>Internship @ WBUR</b><br><br>Innovative donating experience
                             </p>
                         </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 cover research">
-                        <a href="pages/MSRA.pdf">
+                        <a href="pages/msra.html">
                             <img src="p_image/MSRAw.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
-                                <b>MSRA Springfield</b><br><br>Intern Recruiting System
+                                <b>Internship @ Microsoft Research Asia</b><br><br>Springfield 2.0
                             </p>
                         </a>
                 </div>
@@ -150,7 +150,7 @@
                         <a href="pages/AACTMAD.pdf">
                             <img src="p_image/aactmadg.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
-                                <b>AACTMAD</b><br><br>Retaining Community Volunteers
+                                <b>Consulting Project @ AACTMAD</b><br><br>Retaining Community Volunteers
                             </p>
                         </a>
                     </div>
