--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -149,7 +149,7 @@
     <div class="clearfix">
         <h3 style="margin-top:20px;">OBJECTIVE</h2>
         <h3 style="margin-top:20px;">PROCESS</h2>
-          <img src="../p_image/personaP.svg" alt="process for Ethnographic research" />
+          <img src="../p_image/processp.jpg" alt="process for Ethnographic research" />
 
       <h3 style="margin-top:20px;">INSIGHTS</h2>
       <p>
