--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -75,8 +75,12 @@
         <div class="col-lg-3">
             <div class="box">
               <h4>team</h4>
-              <h5>Research Manager</h5>
-              <h5>Research Intern (me)</h5>
+              <h5>UX Director</h5>
+              <h5>UX Researcher (me)</h5>
+              <h5>Copy Editor</h5>
+              <h5>Digital Strategist</h5>
+              <h5>Front-end Developer</h5>
+              <h5>Marketing Strategist</h5>
               </div>
           </div>
         
@@ -88,7 +92,7 @@
                 <h5>- Summarized the user donation journey</h5>
                 <h5>- Created the WBUR user profile containing 3 personas</h5>
                 <h5>- Performed an A/B test</h5>
-                <h5>- Designed and launched an online experiment</h5>
+                <h5>- Designed, coded and launched an online experiment</h5>
                 <h5>- Gave a 45-minute speech to WBUR on the topic of <a href="https://prezi.com/view/Rp0j6K9oBHqyuSEkFA90/"><i><b>What do we know from the persona experiment?</b></i></a></h5>
                 <h5>- Publishe 4 blogs on <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> </h5>
                 </div>
@@ -115,8 +119,8 @@
     <ul><li>Major project
       <ul>
         <li><b>Ethnographic research</b>
-        <li><b>Audiences' donating journey study</b>
         <li><b>A/B test of pitch for potential donors</b>
+        <li><b>Audiences' donating journey study</b>
         <li><b>Engagement experiment design</b> 
         <li><b>Express findings through presentations and blogs</b> 
 
@@ -149,7 +153,7 @@
     <div class="clearfix">
         <h3 style="margin-top:20px;">OBJECTIVE</h2>
         <h3 style="margin-top:20px;">PROCESS</h2>
-          <img src="../p_image/processp.jpg" alt="process for Ethnographic research" />
+          <img src="../p_image/personap.jpg" alt="process for Ethnographic research" />
 
       <h3 style="margin-top:20px;">INSIGHTS</h2>
       <p>
