--- a/index.html
+++ b/index.html
@@ -138,7 +138,18 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 cover research">
-                        <a href="pages/msra.html">
+                    <a href="pages/alexa.html">
+                        <img src="p_image/dwf.png" class="img-responsive" alt="" />
+                        <p class='cover_des'>
+                            <b>Alexa Design Competition @ Amazon</b><br><br>Drive with "friends"
+
+
+                        </p>
+                    </a>
+            </div>
+
+                <div class="col-lg-4 col-md-6 cover research">
+                        <a href="pages/MSRA.pdf">
                             <img src="p_image/MSRAw.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
                                 <b>Internship @ Microsoft Research Asia</b><br><br>Springfield 2.0
@@ -150,7 +161,7 @@
                         <a href="pages/AACTMAD.pdf">
                             <img src="p_image/aactmadg.jpg" class="img-responsive" alt="" />
                             <p class='cover_des'>
-                                <b>Consulting Project @ AACTMAD</b><br><br>Retaining Community Volunteers
+                                <b>Contextual Inquiry @ AACTMAD</b><br><br>Retaining Community Volunteers
                             </p>
                         </a>
                     </div>
@@ -165,7 +176,7 @@
                 <a href="pages/Maestro.html">
                     <img src="p_image/maestro.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
-                        <b>Maestro</b><br><br>Future of conducting major education
+                        <b>UX Research Lead @ MDP Program</b><br><br>Maestro 2.0
                     </p>
                 </a>
             </div>
