--- a/pages/AE.html
+++ b/pages/AE.html
@@ -212,7 +212,7 @@
                         Q1:  Which antibiotic is the most effective one on every bacteria?<br>
                         Q2: For gram-positive, gram-negative bacteria <i>(Bacterial spices are classified into two groups according to <a href="https://en.wikipedia.org/wiki/Gram_stain">Gram Staining</a> technique)</i>, which antibiotic prevents growth of the bacteria group more effectively?<br>
 
-<br>By comparing different MIC value in a row or a column of the raw data (<i>Fig.1</i>),  we can easily pick out the answer of Q1, which has the least MIC of the compared set. But for Q2, it’s hard to tell the answer by just scanning all the MIC and gram staining result. To better figure out insights of the experiment’s raw data, data visualization “Effectiveness of Antibiotics” at the top of this page is designed.
+<br>By comparing different MIC value in a row or a column of the raw data (<i>Fig.1</i>),  we can easily pick out the answer of Q1, which has the least MIC of the compared set. But for Q2, it’s hard to tell the answer by just scanning all the MIC and gram staining result. To better figure out insights of the experiment’s raw data, data visualization “Effectiveness of Antibiotics” below is designed.
                 
                     </p>      
                     </div>
