--- a/pages/alexa.html
+++ b/pages/alexa.html
@@ -85,11 +85,10 @@
           <div class="col-lg-6">
               <div class="box">
                 <h4>my contribution</h4>
-                <h5>- Analyzed 3,600 surveys, 6-month wbur.org's web traffic</h5>
-                <h5>- Organized a focus group event</h5>
-                <h5>- Summarized the user donation journey</h5>
-                <h5>- Created the WBUR user profile containing 3 personas</h5>
-                <h5>- Performed an A/B test</h5>
+                <h5>- Competitor analysis</h5>
+                <h5>- Competitor analysis</h5>
+                <h5>- Analyzed the target market, overall impact</h5>
+                <h5>- Designed voice user interface</h5>
                 <h5>- Designed, coded and launched an online experiment</h5>
                 <h5>- Gave a 45-minute speech to WBUR on the topic of <a href="https://prezi.com/view/Rp0j6K9oBHqyuSEkFA90/"><i><b>What do we know from the persona experiment?</b></i></a></h5>
                 <h5>- Publishe 4 blogs on <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> </h5>
@@ -102,6 +101,7 @@
 
 <section class="page clearfix grey" >
   <h1>INTRODUCTION</h1>
+  <h3>Context</h3>
   <p class="text">
       During Summer 2018, I interned as a UX Researcher (a team of four) at the <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> of <a href="https://www.wbur.org">WBUR - Boston's NPR News Station</a>, utilizing both qualitative and quantitative research methods to explore the future business model for public radio stations. The projects I worked on included
       <!--
