--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -95,7 +95,7 @@
                 <h5>- Performed an A/B test</h5>
                 <h5>- Designed, coded and launched an online experiment</h5>
                 <h5>- Gave a 45-minute speech to WBUR on the topic of <a href="https://prezi.com/view/Rp0j6K9oBHqyuSEkFA90/"><i><b>What do we know from the persona experiment?</b></i></a></h5>
-                <h5>- Publishe 4 blogs on <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> </h5>
+                <h5>- Published 4 blogs on <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> </h5>
                 <h5>- Helped <a href="http://cynthiayue.cc/bookshelf.html">WBUR Bookshelf </a></b> conduct remote usability test</h5>
                 <h5>- Supported WBUR summer pop-up online store
                 </div>
