--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -127,7 +127,7 @@
         <li><b>Who are the WBUR listeners? </b>
         <br>Inform the station whom they are providing content for, building the community with to develop better audience-empathy.
         <li><b>What is the path a listener takes to donation?</b>
-        <br>The answer will help design multi-step fund-raising experiences for listeners' personalized journeies with WBUR.
+        <br>The answer will help design multi-step fund-raising experiences for listeners' personalized journeys with WBUR.
         <li><b>What are the best methods for soliciting donations in different existing channels?</b>
             <br>WBUR delivers its content through multiple channels, but the fund-raising campaign still keeps the same, which may lead to unrealized revenue loss.
 
