--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -214,6 +214,7 @@
       <img src="../p_image/snotes.png" alt="affinity wall" />
       <p class="center"><i style="font-weight:400; font-size:10pt;">Sticky notes & Affinity mapping
         </i></p>
+        
 
 
       <h4 >Deliverables</h2>
@@ -262,8 +263,10 @@
       </p>
     <div class="clearfix"style="margin:30px;">
         <h4 >Literature review</h4>
-        <h4 >Research into practice</h4>
         <h4 >Donor's journey</h4>
+        <div class="col-lg-6">
+        <img src="wbur/engagement.png" alt="" width="50%;"/>
+        </div>
         <p class="text">
           <ul style="list-style-type:none;">
             <li><svg width="20px" height="20px" viewBox="0 0 96 91" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
