--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -151,9 +151,9 @@
   <h3>Overview</h3>
       <ul>
         <li><b>Persona</b>
-        <li><b>Audiences' donating journey study</b>
-        <li><b>A/B test of pitch for potential donors</b>
-        <li><b>Engagement experiment design</b> 
+        <li><b>Audiences' Donating Journey Study</b>
+        <li><b>A/B Test of pitch for potential donors</b>
+        <li><b>Engagement Experiment Design</b> 
         <li><b>Express findings through presentations and blogs</b> 
 
 
@@ -257,17 +257,22 @@
                       <img src="wbur/LLp.png" alt="" style="box-shadow:0px 0px 3px #888888;"/>
                     </div>
     </div>
-    <h3>Audiences' Donating Journey</h3>
+    <h3>Audiences' Donating Journey Study
+    </h3>
     <p class="text">
        
       </p>
     <div class="clearfix"style="margin:30px;">
-        <h4 >Literature review</h4>
-        <h4 >Donor's journey</h4>
+        <h4 >Engagement funnel</h4>
         <div class="col-lg-6">
-        <img src="wbur/engagement.png" alt="" width="50%;"/>
-        </div>
-        <p class="text">
+            <img src="wbur/engagement.png" alt="" width="50%;"/>
+            </div>
+            <div class="col-lg-6">
+                <img src="wbur/engagementt.png" alt="" width="50%;"/>
+              </div>
+        <h4 >Donor's journey</h4>
+      
+          <div>
           <ul style="list-style-type:none;">
             <li><svg width="20px" height="20px" viewBox="0 0 96 91" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
@@ -335,6 +340,7 @@
           <i>Support</i><br> We’ve reached the summit with our user and they are ready to donate! Or are they? The moment people have an impulse to donate is influenced many factors, and we highly recommend Erez Yoeli‘s TEDx talk on how to increase altruistic moments. We also recommend reading “Why supporters pay for journalism (hint: it’s not about exclusive access),” from the Membership Puzzle.</li>
 
           </p>
+          </div>
       </div>
   </section>
   <section class="page clearfix"  >
@@ -364,6 +370,7 @@
 
     </p>
     <div class="clearfix" style="margin:30px;">
+      <h4>Literature review</h4>
       <h4>Message to be delivered</h4>
       <h4>Sample size</h4>
       <h4>Recruiting</h4>
