--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -274,70 +274,73 @@
       
           <div>
           <ul style="list-style-type:none;">
-            <li><svg width="20px" height="20px" viewBox="0 0 96 91" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <li><svg width="26px" height="24px" viewBox="0 0 26 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
               <title>Star</title>
               <desc>Created with Sketch.</desc>
               <defs></defs>
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <g id="Artboard" transform="translate(-256.000000, -67.000000)" stroke="#231F20" stroke-width="2">
-                      <polygon id="Star" points="302.5 142.533726 277.469623 155.692973 282.25 127.82124 262 108.082368 289.984812 104.015937 302.5 78.6573956 315.015188 104.015937 343 108.082368 322.75 127.82124 327.530377 155.692973"></polygon>
+                  <g id="Artboard-Copy-3" transform="translate(-228.000000, -178.000000)" stroke="#231F20" stroke-width="2">
+                      <polygon id="Star" points="241 196.771933 234.81966 200.02113 236 193.139221 231 188.265425 237.90983 187.261368 241 181 244.09017 187.261368 251 188.265425 246 193.139221 247.18034 200.02113"></polygon>
                   </g>
               </g>
           </svg>
-          <i>Become a listener</i><br> This is the moment when someone first encounters WBUR content, either on-air, on demand, online, or on stage. At this point, they may or may not know who created the content. A connection exists between the content and the listener, not between the program, WBUR, and the listener.</li>
+          <i><b>Become a listener</b></i><br> This is the moment when someone first encounters WBUR content, either on-air, on demand, online, or on stage. At this point, they may or may not know who created the content. A connection exists between the content and the listener, not between the program, WBUR, and the listener.</li>
           <br>
-          <li><svg width="20px" height="20px" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <li><svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
             <title>Rectangle</title>
             <desc>Created with Sketch.</desc>
             <defs></defs>
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                <g id="Artboard" transform="translate(-421.000000, -67.000000)" stroke="#212121" stroke-width="2">
-                    <rect id="Rectangle" x="432" y="88" width="78" height="78"></rect>
+                <g id="Artboard-Copy-3" transform="translate(-399.000000, -181.000000)" stroke="#212121" stroke-width="2">
+                    <rect id="Rectangle" x="400" y="182" width="18" height="18"></rect>
                 </g>
             </g>
         </svg>
-        <i>Rely on the program</i><br> Next, as the consumer listens, reads, and/or experiences the content repeatedly, they begin to associate value with the program, and rely on the program for delivering that quality.</li>
+        <i><b>Rely on the program</b></i><br> Next, as the consumer listens, reads, and/or experiences the content repeatedly, they begin to associate value with the program, and rely on the program for delivering that quality.</li>
         <br>
-        <li><svg width="20px" height="20px" viewBox="0 0 102 102" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <li><svg width="22px" height="22px" viewBox="0 0 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
           <title>Oval</title>
           <desc>Created with Sketch.</desc>
           <defs></defs>
           <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-              <g id="Artboard" transform="translate(-576.000000, -57.000000)" stroke="#231F20" stroke-width="2">
-                  <circle id="Oval" cx="627" cy="118" r="40"></circle>
+              <g id="Artboard-Copy-3" transform="translate(-565.000000, -180.000000)" stroke="#231F20" stroke-width="2">
+                  <circle id="Oval" cx="576" cy="191" r="10"></circle>
               </g>
           </g>
       </svg>
-          <i>Become aware of WBUR brand</i><br> For our longtime listeners and lifelong Boston residents, it is hard to remember a time before knowing WBUR (!), but this is a critical point in a donor’s journey. Listeners, in order to get to a point of donation, they must be aware of WBUR as a brand, distinct from WGBH (the “other” Boston NPR station) and from NPR. For listeners to a specific syndicated program, particularly on demand, they may not recognize WBUR’s brand until the program explains multiple times the relationship between the program and WBUR.</li>
+          <i><b>Become aware of WBUR brand</b></i><br> For our longtime listeners and lifelong Boston residents, it is hard to remember a time before knowing WBUR (!), but this is a critical point in a donor’s journey. Listeners, in order to get to a point of donation, they must be aware of WBUR as a brand, distinct from WGBH (the “other” Boston NPR station) and from NPR. For listeners to a specific syndicated program, particularly on demand, they may not recognize WBUR’s brand until the program explains multiple times the relationship between the program and WBUR.</li>
           <br>
-          <li><svg width="20px" height="20px" viewBox="0 0 104 104" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <li><svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
             <title>Triangle</title>
             <desc>Created with Sketch.</desc>
             <defs></defs>
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                <g id="Artboard" transform="translate(-707.000000, -54.000000)" stroke="#212121" stroke-width="2">
-                    <polygon id="Triangle" points="759 76 799 156 719 156"></polygon>
+                <g id="Artboard-Copy-3" transform="translate(-731.000000, -178.000000)" stroke="#212121" stroke-width="2">
+                    <polygon id="Triangle" points="743 181 753 201 733 201"></polygon>
                 </g>
             </g>
         </svg>
-          <i>Become an insider of WBUR community</i><br> When someone is loyal to a program and aware of WBUR, we consider them to be transitioning into an “insider.” Insiders view WBUR as important to them, either because it makes them smarter, it keeps them up on the news, or it speaks to them emotionally. The work required to usher someone to this insider status is not easy, and we have drawn a lot of inspiration from The Membership Puzzle and their guidance on hosting communities of practice.</li>
-          <br><li><svg width="20px" height="20px" viewBox="0 0 100 102" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <i><b>Become an insider of WBUR community</b></i><br> When someone is loyal to a program and aware of WBUR, we consider them to be transitioning into an “insider.” Insiders view WBUR as important to them, either because it makes them smarter, it keeps them up on the news, or it speaks to them emotionally. The work required to usher someone to this insider status is not easy, and we have drawn a lot of inspiration from The Membership Puzzle and their guidance on hosting communities of practice.</li>
+          <br><li><svg width="24px" height="30px" viewBox="0 0 24 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
-            <title>Triangle 2</title>
+            <title>Group</title>
             <desc>Created with Sketch.</desc>
             <defs></defs>
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                <g id="Artboard" transform="translate(-895.000000, -56.000000)" stroke="#231F20" stroke-width="2">
-                    <path d="M932,78 L932,158" id="Line" stroke-linecap="square"></path>
-                    <polygon id="Triangle-2" points="984 104 932 130 932 78"></polygon>
+                <g id="Artboard-Copy-3" transform="translate(-894.000000, -175.000000)">
+                    <g id="Group" transform="translate(895.000000, 177.000000)">
+                        <path d="M4.91803279,0.327868852 L4.91803279,26.557377" id="Line" stroke="#231F20" stroke-width="2" stroke-linecap="square"></path>
+                        <polygon id="Triangle-2" stroke="#231F20" stroke-width="2" points="20 7.54098361 4.91803279 15.0819672 4.91803279 0"></polygon>
+                        <path d="M0,26.8852459 L9.83606557,26.8852459" id="Line-2" stroke="#212121" stroke-width="1.5" stroke-linecap="square"></path>
+                    </g>
                 </g>
             </g>
         </svg>
-          <i>Support</i><br> We’ve reached the summit with our user and they are ready to donate! Or are they? The moment people have an impulse to donate is influenced many factors, and we highly recommend Erez Yoeli‘s TEDx talk on how to increase altruistic moments. We also recommend reading “Why supporters pay for journalism (hint: it’s not about exclusive access),” from the Membership Puzzle.</li>
+          <i><b>Support</b></i><br> We’ve reached the summit with our user and they are ready to donate! Or are they? The moment people have an impulse to donate is influenced many factors, and we highly recommend Erez Yoeli‘s TEDx talk on how to increase altruistic moments. We also recommend reading “Why supporters pay for journalism (hint: it’s not about exclusive access),” from the Membership Puzzle.</li>
 
           </p>
           </div>
